<resources>
    <string name="app_name">RPS-Droid</string>
    <string name="swPlayer">Player</string>
    <string name="swComputer">Computer</string>
    <string name="txtOpponentType">vs. Computer</string>
    <string name="lblPlayer1">Player1</string>
    <string name="lblPlayer2">Player2</string>
    <string name="txtPlayer2Name">Skynet</string>
    <string name="btnPlay">PLAY</string>
    <string name="lblResults">Results</string>
    <string name="txtP1Weapon">Weapon1</string>
    <string name="txtP2Weapon">Weapon2</string>

    <string-array name="attacks_array">
        <item>Rock</item>
        <item>Paper</item>
        <item>Scissors</item>
        <!--<item>Lizard</item>-->
        <!--<item>Spock</item>-->
    </string-array>

</resources>
