<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:rowCount="10"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01"
        android:gravity="center_horizontal">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swPlayer"
            android:id="@+id/swPlayer"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/swComputer"
            android:id="@+id/txtSwitchLabel"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtOpponentType"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:background="#341f6a86">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblPlayer1"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblPlayer2"
            android:id="@+id/textView3"
            android:layout_marginLeft="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:layout_weight="0.10"
        android:weightSum="1">

        <Spinner
            android:layout_width="134dp"
            android:layout_height="match_parent"
            android:id="@+id/spnrAttack"
            android:clickable="false"
            android:spinnerMode="dropdown"
            android:layout_gravity="left" />

        <Space
            android:layout_width="100dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtPlayer2Name"
            android:id="@+id/textView9"
            android:layout_gravity="right"
            android:layout_weight="0.15" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlay"
        android:id="@+id/btnPlay"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01"
        android:background="#37d119"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblResults"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.12"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:background="#341f6a86" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtP1Weapon"
            android:id="@+id/txtP1Attack"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtP2Weapon"
            android:id="@+id/txtP2Attack"
            android:layout_marginLeft="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01"
        android:gravity="center_horizontal"
        android:background="#34ffffff" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtResult"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>
